Add missing reply features